<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_prediction">

    <fragment
        android:id="@+id/navigation_prediction"
        android:name="com.jprinz.rsp.ui.prediction.PredictionFragment"
        android:label="@string/title_prediction"
        tools:layout="@layout/fragment_prediction" />

    <fragment
        android:id="@+id/navigation_world_rankings"
        android:name="com.jprinz.rsp.ui.worldrankings.WorldRankingsFragment"
        android:label="@string/title_world_rankings"
        tools:layout="@layout/fragment_world_rankings" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.jprinz.rsp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
